<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/cancel_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel_button"
        android:layout_gravity="end"
        android:layout_margin="@dimen/dim_15"/>

    <TextView

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_semibold"/>


    <TextView
        android:layout_marginTop="@dimen/dim_10"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/lato"/>


    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_10"
        android:layout_marginTop="@dimen/dim_20"
        android:layout_marginRight="@dimen/dim_10"
        android:hint="Enter email address">

    </EditText>

    <TextView
        android:id="@+id/reset_tv"
        android:layout_marginTop="@dimen/dim_15"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/color_blue"
        android:textSize="20sp"
        android:fontFamily="@font/lato"/>

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_marginBottom="@dimen/dim_20"
        android:layout_marginTop="@dimen/dim_25"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/color_blue"
        android:textSize="20sp"
        android:fontFamily="@font/lato"/>

</LinearLayout>