<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.BattingSessionActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bowling_img1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_company"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@color/secondaryLightColor"
                android:layout_height="@dimen/toolbar_height">
                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="@dimen/dim_10"
                    android:src="@drawable/back_arrow"/>
                <TextView
                    android:id="@+id/company_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dim_10"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/batting_session_summary"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_20"
                android:layout_marginTop="@dimen/dim_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dim_10"
                    android:background="@drawable/home_option_background"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dim_2"
                    android:paddingStart="@dimen/dim_10"
                    android:paddingLeft="@dimen/dim_10"
                    android:prompt="@string/option_box1"
                    android:textColor="#BA070707"
                    android:textSize="@dimen/options_size" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/dropdown"
                    android:layout_margin="@dimen/dim_15"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/type_text"
                    android:fontFamily="@font/lato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/dim_15"
                    android:layout_marginTop="@dimen/dim_10"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_margin="@dimen/dim_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/age_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_50"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dim_10"
                    android:background="@drawable/home_option_background"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dim_2"
                    android:paddingStart="@dimen/dim_10"
                    android:paddingLeft="@dimen/dim_10"
                    android:prompt="@string/option_box1"
                    android:textColor="@color/primaryLightColor"
                    android:textSize="@dimen/options_size" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/dropdown"
                    android:layout_margin="@dimen/dim_15"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_20"
                android:layout_marginRight="@dimen/dim_20"
                android:padding="@dimen/dim_10"
                android:background="@drawable/bowling_background"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0.50"
                    android:text="Player's\n name"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/lato"/>
                <TextView
                    android:id="@+id/speed_heading_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0.50"
                    android:text="@string/bat_swing_speed_km"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/lato"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlack"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/cp_cardview"
            android:layout_width="250dp"
            android:layout_height="@dimen/dim_150"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="16dp"
            android:visibility="gone"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cp_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/secondaryTextColor"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/cp_pbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_65"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:indeterminateTint="@color/primaryColor"
                    android:layout_marginTop="@dimen/dim_25"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cp_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="@dimen/dim_20"
                    android:layout_marginBottom="15dp"
                    android:text="@string/progressbar_text"
                    android:textColor="@color/primaryDarkColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>



</layout>